Implemented direct word distance, in case nGram Search doesn't find anything